--- a/.gitmodules
+++ b/.gitmodules
@@ -129,7 +129,8 @@
 [submodule "third_party/tensorpipe"]
     ignore = dirty
     path = third_party/tensorpipe
-    url = https://github.com/pytorch/tensorpipe.git
+    branch = torch-1.12.0
+    url = https://github.com/llv22/tensorpipe-macos-cuda.git
 [submodule "third_party/cudnn_frontend"]
 	path = third_party/cudnn_frontend
 	url = https://github.com/NVIDIA/cudnn-frontend.git
